# pypfb

./: .gitignore  .pre-commit-config.yaml  .secexclude  .secinclude  .secrets.baseline  .travis.yml  MANIFEST.in  Pipfile  README.md  README_dict.md  addField.py  addRecord.py  addRecordNotes.py  config.yml  dict2pfb.py  json2pfb.py  makeBlankRecord.py  pull_request_template.md  pyproject.toml  reader.py  removeField.py  requirements-dev.txt  requirements.txt  setup.py  th_wrapper.py
.dependabot/: config.yml
.github/workflows/: ci.yaml  pypi.yaml  pythonpublish.yml  release.yaml
avro_utils/: avro_schema.py  avro_types.py
doc/: README.md  metadata.dot  sample.avdl
doc/jekyll/: Gemfile  index.md  schema.dot
docs/: Gemfile  _config.yml  detailed_pfb_doc.md  index.md
examples/: data.avro  data_enum.avro  data_update.avro  gdc.avro  show.py  test.avro  thing.avro
examples/minimal-pfb/: minimal_file.json
examples/rich-data-node-pfb/: standard-expanded.json
minimal_example/: minimal_file.avro  minimal_file.json  minimal_file_data.pfb  temp_files.json
pfb/: base.py  cli.py  reader.py  schema.py  writer.py
pfb/commands/: add.py  rename.py
pfb/exporters/: gremlin.py
pfb/importers/: gen3dict.py  json.py
pypfb/: __main__.py  errors.py  exporters.py  file.py  pfb.py  reader.py  writer.py
pypfb/avro_utils/: avro_schema.py  avro_types.py
pypfb/utils/: dictionary.py  str.py
python_pfb_sdk/: __main__.py  writer.py
src/pfb/: base.py  cli.py  reader.py  writer.py
tests/: app_test.py  conftest.py  test-nested-objects.py  test_commands.py  test_dict.py  test_etl.py  test_foaf.py
tests/data/: DataImportOrder.txt  aligned_reads.json  aligned_reads_index.json  aligned_reads_metric.json  alignment_workflow.json  aliquot.json  analysis_metadata.json  annotated_somatic_mutation.json  annotation.json  biospecimen_supplement.json  clinical_supplement.json  demographic.json  diagnosis.json  experiment_metadata.json  family.json  family_relationship.json  germline_mutation_calling_workflow.json  germline_variation_index.json  investigator.json  medical_history.json  outcome.json  participant.json  phenotype.json  read_group.json  read_group_qc.json  run_metadata.json  sample.json  simple_germline_variation.json  simple_somatic_mutation.json  slide.json  slide_image.json  somatic_annotation_workflow.json  somatic_mutation_calling_workflow.json  somatic_mutation_index.json  study_file.json  submitted_aligned_reads.json  submitted_unaligned_reads.json
tests/etl/: etl_mapping.yaml
tests/foaf/: .gitignore
tests/nested-objects/: .gitignore  nested-objects-gen3-schema.json
tests/pfb-data/: test.avro
tests/reference_file/: ingestion.py  minimal_data.avro  minimal_schema.avro  ref_file_helper.py  test_ingestion.py  to_pfb.py  to_tsv.py
tests/schema/: kf.avro
tests/tsv_data/: aligned_reads.tsv  aligned_reads_index.tsv  aligned_reads_metric.tsv  alignment_workflow.tsv  aliquot.tsv  analysis_metadata.tsv  annotated_somatic_mutation.tsv  annotation.tsv  biospecimen_supplement.tsv  clinical_supplement.tsv  demographic.tsv  diagnosis.tsv  experiment_metadata.tsv  family.tsv  family_relationship.tsv  germline_mutation_calling_workflow.tsv  germline_variation_index.tsv  investigator.tsv  medical_history.tsv  (+17 more)
utils/: dictionary.py  str.py
working/: data_from_portal.avro  minimal.json  minimal_empty.avro  minimal_file.avro  minimal_file.json  minimal_file_data.avro  minimal_w_data.avro  schema.avro  schema.json  schema_pp.json  temp.txt
(+59 files in other folders)
