[tool.poetry]
name = "pypfb"
version = "0.5.29"
description = "Python SDK for PFB format"
authors = ["CTDS UChicago <cdis@uchicago.edu>"]
license = "Apache-2.0"
packages = [
    { include = "pfb", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.9, <4"
click = "^8.1.7"
fastavro = "~1.8.2"
python-json-logger = "^0.1.11"
PyYAML = "^6.0.1"
importlib_metadata = { version = ">=3.6.0", python = "<=3.9" }
gen3dictionary = ">=2.0.3"
aiohttp = "^3.6.3"
dictionaryutils = "^3.4.8"
gen3 = "^4.11.3"

[tool.poetry.dev-dependencies]
codacy-coverage = "*"
pytest = "~=6.2.5"
pytest-cov = "~=2.5"
truffleHog = "*"
gen3git = "*"

[tool.poetry.scripts]
pfb = 'pfb.cli:main'

[tool.poetry.plugins."pfb.plugins"]
"from_gen3dict" = "pfb.importers.gen3dict"
"from_json" = "pfb.importers.json"
"from_tsv" = "pfb.importers.tsv"
"to_gremlin" = "pfb.exporters.gremlin"
"to_tsv" = "pfb.exporters.tsv"
"show" = "pfb.commands.show"
"add" = "pfb.commands.add"
"rename" = "pfb.commands.rename"
"import" = "pfb.commands.import"
"etl" = "pfb.commands.etl"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
